k8s/api-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: celebikutay/gotodo-api:latest
          name: api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
