k8s/frontend-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:

        - image: celebikutay/gotodo-frontend:latest
          name: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
