k8s/api-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
