k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
    - host: demo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
